# derive_less

./: Cargo.toml  README.md
examples/: enums.rs  fn.rs  issue_1.rs  issue_2.rs  issue_3.rs  issue_4.rs  issue_6.rs  mixed.rs  mixed_public.rs  permuted.rs  simple.rs  structs.rs  tuple-structs.rs  unit-structs.rs
src/: lib.rs
