[package]
name = "derive_less"
version = "0.1.7"
authors = ["Klas Segeljakt <klasseg@kth.se>"]
readme = "README.md"
repository = "https://github.com/segeljakt/derive_less"
homepage = "https://github.com/segeljakt/derive_less"
edition = "2018"
description = """
A library for generating `#[...]` and `pub` code for structs and enums.
"""
license = "MIT"

[dependencies]
