[package]
name = "derive_less"
version = "0.2.0"
authors = ["Klas Segeljakt <klasseg@kth.se>"]
readme = "README.md"
repository = "https://github.com/segeljakt/derive_less"
homepage = "https://github.com/segeljakt/derive_less"
edition = "2018"
description = "A macro for templating item declarations."
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.8", features = ["full"] }
proc-quote = "0.3.0"
proc-macro2 = "1.0.6"
